Feat: gemini 오늘의 책 index.html 렌더링처리